# Analisis

./: CMakeLists.txt
Mathnalysis/: #PivParcial.cpp#  CMakeLists.txt  Cholesky.cpp~  EGS.cpp  Makefile  Mathnalysis.cpp  Mathnalysis.h  PivParcial.cpp  PivTotal.cpp  PivTotal.cpp~  PuntoFijo.cpp  PuntoFijo.h  biseccion.cpp  biseccion.h  busqueda_incrementa.cpp  busqueda_incrementa.h  crout.cpp  crout.h  exceptions.h  gaussSeidel.cpp  gaussSeidel.h  jacobi.cpp  newton.cpp  newton.h  raices_multiples.cpp  raices_multiples.h  reglaFalsa.cpp  reglaFalsa.h  scrit.bat  secante.cpp
Mathnalysis/EcuacionesUnaVariable/: PuntoFijo.cpp  biseccion.cpp  newton.cpp  newton.h  raices_multiples.cpp  reglaFalsa.cpp  secante.cpp  secante.h
Mathnalysis/VariasVariables/: Cholesky.cpp  Cholesky.h  EGS.cpp  EGS.h  PivParcial.cpp  PivParcial.h  PivTotal.cpp  PivTotal.h  crout.cpp  crout.h  doolittle.cpp  doolittle.h  escalonado.cpp  escalonado.h  gaussSeidel.cpp  gaussSeidel.h  jacobi.cpp  jacobi.h
Mathnalysis/analizador/: analizer.cpp  analizer.h  ast.cpp  ast.h  calculator.cpp  calculator.h  parser.cpp
Mathnalysis/integracion/: diferenciacion.cpp  diferenciacion.h  simpson.cpp  simpson.h  trapecio.cpp  trapecio.h
Mathnalysis/interpolacion/: InterpolacionCubica.cpp  InterpolacionCubica.h  InterpolacionLineal.cpp  InterpolacionLineal.h  diferenciasdivididas.cpp  diferenciasdivididas.cpp~  diferenciasdivididas.h  lagrange.cpp  lagrange.cpp~  lagrange.h  splineCuadratico.cpp  splineCuadratico.h
